[package]
name = "rust3270"
description = "rust3270 is a terminal server interface to the IBM 3270 terminal protocol, written in Rust."
version = "0.1.1"
authors = ["Dominik Downarowicz <dominik@downardo.at>"]
edition = "2024"
readme = "README.MD"
license = "MIT"
repository = "https://github.com/downarowiczd/rust3270"
homepage = "https://github.com/downarowiczd/rust3270"

[features]
debug-msg-print = []

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[dependencies]
bitflags = "2.9.1"
libtelnet-rs = "2.0.0"
snafu = "0.8.6"

[dev-dependencies]
anyhow = "1.0.98"
hex = "0.4.3"
structopt = "0.3.26"
